Fix language create layout login

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,8 @@
     "label": {
       "home": "Home",
       "introduce": "Introduce",
-      "products": "Products"
+      "products": "Products",
+      "signIn" : "Sign In"
     },
     "button": {
       "login": "Login",
