--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -3,7 +3,8 @@
     "label": {
       "home": "Trang chủ",
       "introduce": "Giới thiệu",
-      "products": "Sản phẩm"
+      "products": "Sản phẩm",
+      "signIn" : "Đăng nhập"
     },
     "button": {
       "login": "Đăng nhập",
